Bug 293174 - Contact list crashed when closed
Summary: Contact list crashed when closed
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: 0.4.0
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-02 21:39 UTC by Daniele E. Domenichelli
Modified: 2012-07-06 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (1.75 KB, text/plain)
2012-03-18 10:29 UTC, Aleix Pol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-02-02 21:39:04 UTC
Application: ktp-contactlist (0.3)
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.8.0
Operating System: Linux 3.1.0-1-amd64 x86_64
Distribution: Debian GNU/Linux testing (wheezy)

-- Information about the crash:
- What I was doing when the application crashed:
Just closed the contact list... I trued to reproduce, but without success

-- Backtrace:
Application: KDE Telepathy Contact List (ktp-contactlist), signal: Segmentation fault
[KCrash Handler]
#6  QWidget::~QWidget (this=0x1e9d430, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1628
#7  0x000000000044c9ad in KToolTipWindow::~KToolTipWindow (this=0x1e9d430, __in_chrg=<optimized out>) at /opt/telepathy/ktp-contact-list/tooltips/ktooltipwindow.cpp:44
#8  0x000000000044c9e6 in KToolTipWindow::~KToolTipWindow (this=0x1e9d430, __in_chrg=<optimized out>) at /opt/telepathy/ktp-contact-list/tooltips/ktooltipwindow.cpp:46
#9  0x000000000044b1e5 in KToolTipManager::~KToolTipManager (this=0x1a83e80, __in_chrg=<optimized out>) at /opt/telepathy/ktp-contact-list/tooltips/ktooltip.cpp:53
#10 0x000000000044b17d in destroy () at /opt/telepathy/ktp-contact-list/tooltips/ktooltip.cpp:44
#11 0x000000000044b477 in KCleanUpGlobalStatic::~KCleanUpGlobalStatic (this=0x66f260, __in_chrg=<optimized out>) at /usr/include/kglobal.h:62
#12 0x00007f45b0730d82 in __run_exit_handlers (status=0, listp=0x7f45b0a784c8, run_list_atexit=true) at exit.c:78
#13 0x00007f45b0730dd5 in *__GI_exit (status=32101424) at exit.c:100
#14 0x00007f45b0718eb4 in __libc_start_main (main=<optimized out>, argc=<optimized out>, ubp_av=<optimized out>, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffcdd8ced8) at libc-start.c:260
#15 0x000000000041e539 in _start ()

Reported using DrKonqi
Comment 1 Martin Klapetek 2012-02-08 10:23:13 UTC
Fixed in 0.3.
Comment 2 Aleix Pol 2012-03-18 10:29:03 UTC
Created attachment 69706 [details]
New crash information added by DrKonqi

ktp-contactlist (0.3) on KDE Platform 4.8.1 (4.8.1) using Qt 4.8.0

- What I was doing when the application crashed:
I was closing the contact list, then crashed when I didn't remember about it anymore.

It doesn't happen always I think, but most of the time.

-- Backtrace (Reduced):
#6  0x00007fa2c905c699 in QWidget::~QWidget() () from /usr/lib/libQtGui.so.4
#7  0x0000000000450a9d in KToolTipWindow::~KToolTipWindow (this=0x2102150, __in_chrg=<optimized out>) at /home/kde-devel/src/telepathy/ktp-contact-list/tooltips/ktooltipwindow.cpp:44
#8  0x0000000000450ad6 in KToolTipWindow::~KToolTipWindow (this=0x2102150, __in_chrg=<optimized out>) at /home/kde-devel/src/telepathy/ktp-contact-list/tooltips/ktooltipwindow.cpp:46
#9  0x000000000044f2d5 in KToolTipManager::~KToolTipManager (this=0x1783f60, __in_chrg=<optimized out>) at /home/kde-devel/src/telepathy/ktp-contact-list/tooltips/ktooltip.cpp:53
#10 0x000000000044f26d in destroy () at /home/kde-devel/src/telepathy/ktp-contact-list/tooltips/ktooltip.cpp:44
Comment 3 Martin Klapetek 2012-05-31 22:31:46 UTC
Still reproducible - point the mouse at contact, tooltip appears, press alt+f4, crash.
Comment 4 Aleix Pol 2012-05-31 22:39:15 UTC
FWIW I have never stopped to have this crash.
Comment 5 Martin Klapetek 2012-05-31 22:48:43 UTC
Git commit c25e962cdd0a7268dd2ce9af7b018ccb522917d7 by Martin Klapetek.
Committed on 01/06/2012 at 00:46.
Pushed by mklapetek into branch 'master'.

Don't crash on deletition

Reviewed-by: David Edmundson

M  +1    -1    tooltips/ktooltip.cpp

http://commits.kde.org/telepathy-contact-list/c25e962cdd0a7268dd2ce9af7b018ccb522917d7
Comment 6 Martin Klapetek 2012-05-31 22:49:36 UTC
Please test and reopen if it still crashes for you, thanks.