Don't crash on deletition

Reviewed-by: David Edmundson
BUG: 293174